--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,1 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Koulen&display=swap'); /*Fonte Koulen */
+@import url('https://fonts.googleapis.com/css2?family=Kufam:ital,wght@0,400..900;1,400..900&display=swap'); /* Font Kufam */
+
 @import "tailwindcss";
+
+.text-shadow {
+    text-shadow: 0px 10px 8px #00000040;
+}
