--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -18,6 +18,7 @@
     --color-laranja: #FF9800;
     --color-cinza: #D7CCC8;
     --color-brancoSal: #FAFAFA;
+    --color-corErro: rgba(255, 32, 32, 0.432);
 
 }
 
