--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Koulen&display=swap'); /*Fonte Koulen */
-@import url('https://fonts.googleapis.com/css2?family=Kufam:ital,wght@0,400..900;1,400..900&display=swap'); /* Font Kufam */
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap'); /* Font Opens Sans */
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap'); /* Font Bebas Neue */
+@import '@fortawesome/fontawesome-free/css/all.min.css'; /* Font Awesome */
+
 
 @import "tailwindcss";
 
