--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Koulen&display=swap'); /*Fonte Koulen */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap'); /* Font Opens Sans */
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap'); /* Font Bebas Neue */
-@import '@fortawesome/fontawesome-free/css/all.min.css'; /* Font Awesome */
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap'); /* Font Inter */
 
 
 @import "tailwindcss";
@@ -47,5 +47,33 @@ border-radius: 8px;
 .custom-scrollbar::-webkit-scrollbar-thumb {
 background: #26382f;
 border-radius: 8px;
+
 }
+.select {
+    box-shadow: inset 0px -6px 5px -6px #4CAF50;
+}
+
+@keyframes border-expand {
+    from {
+        width: 0%;
+    }
+    to {
+        width: 100%;
+    }
+}
+
+.animation-tab::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px; /* Ajusta a posição da borda */
+    width: 0%;
+    height: 2px;
+    background-color: #4CAF50; /* Substitua pela cor desejada */
+    animation: border-expand 0.3s ease-in-out forwards;
+}
+
+
+
+
 
