--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -21,6 +21,7 @@
     --color-cinza: #D7CCC8;
     --color-brancoSal: #FAFAFA;
     --color-corErro: #ff20206e;
+    --color-ErroModal: #971212;
     --color-corSucesso: #92d7946a;
     --color-separator: #CAC4D0;
     --color-hoverMenu: #dedede1e;
@@ -71,11 +72,41 @@ border-radius: 8px;
     content: "";
     position: absolute;
     left: 0;
-    bottom: -1px; /* Ajusta a posição da borda */
+    bottom: -1px;
     width: 0%;
     height: 2px;
-    background-color: #4CAF50; /* Substitua pela cor desejada */
+    background-color: #4CAF50; 
     animation: border-expand 0.3s ease-in-out forwards;
+}
+
+@keyframes slideIn {
+    from {
+        transform: translateX(100%);
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes slideOut {
+    from {
+        transform: translateX(0);
+        opacity: 1;
+    }
+    to {
+        transform: translateX(100%);
+        opacity: 0;
+    }
+}
+
+.toast-enter {
+    animation: slideIn 0.3s ease-out forwards;
+}
+
+.toast-exit {
+    animation: slideOut 0.3s ease-in forwards;
 }
 
 
