--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -55,8 +55,25 @@ border-radius: 8px;
 .custom-scrollbar::-webkit-scrollbar-thumb {
 background: #26382f;
 border-radius: 8px;
-
 }
+.custom-scrollbar-products::-webkit-scrollbar {
+    width: 9px;
+}
+
+.custom-scrollbar-products::-webkit-scrollbar-track {
+background: transparent;
+border-radius: 8px;
+}
+
+.custom-scrollbar-products::-webkit-scrollbar-thumb {
+background: #b9b9b9;
+border-radius: 8px;
+}
+
+.custom-scrollbar-products::-webkit-scrollbar-thumb:hover {
+background: #a0a0a0; /* cor mais escura no hover */
+}
+
 .select {
     box-shadow: inset 0px -6px 5px -6px #4CAF50;
 }
@@ -79,36 +96,6 @@ border-radius: 8px;
     height: 2px;
     background-color: #4CAF50; 
     animation: border-expand 0.3s ease-in-out forwards;
-}
-
-@keyframes slideIn {
-    from {
-        transform: translateX(100%);
-        opacity: 0;
-    }
-    to {
-        transform: translateX(0);
-        opacity: 1;
-    }
-}
-
-@keyframes slideOut {
-    from {
-        transform: translateX(0);
-        opacity: 1;
-    }
-    to {
-        transform: translateX(100%);
-        opacity: 0;
-    }
-}
-
-.toast-enter {
-    animation: slideIn 0.3s ease-out forwards;
-}
-
-.toast-exit {
-    animation: slideOut 0.3s ease-in forwards;
 }
 
 
