--- a/front-end/src/styles/index.css
+++ b/front-end/src/styles/index.css
@@ -43,6 +43,10 @@
 .sombra {
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.289);
 }
+
+.sombra-botao {
+    box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.289);
+}
 .custom-scrollbar::-webkit-scrollbar {
     width: 8px;
 }
