Modal de Cadastro de lotes feito

--- a/front-end/src/styles/index.css
+++ b/front-end/src/styles/index.css
@@ -78,6 +78,24 @@ border-radius: 8px;
 background: #a0a0a0; /* cor mais escura no hover */
 }
 
+.custom-scrollbar-modal::-webkit-scrollbar {
+    width: 9px;
+}
+
+.custom-scrollbar-modal::-webkit-scrollbar-track {
+background: transparent;
+border-radius: 8px;
+}
+
+.custom-scrollbar-modal::-webkit-scrollbar-thumb {
+background: #b9b9b9;
+border-radius: 8px;
+}
+
+.custom-scrollbar-modal::-webkit-scrollbar-thumb:hover {
+background: #a0a0a0; /* cor mais escura no hover */
+}
+
 .select {
     box-shadow: inset 0px -6px 5px -6px #4CAF50;
 }
