--- a/front-end/src/styles/index.css
+++ b/front-end/src/styles/index.css
@@ -60,7 +60,8 @@ border-radius: 8px;
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-background: #26382f;
+background: #c31b1b;
+/* background: #26382f; */
 border-radius: 8px;
 }
 .custom-scrollbar-products::-webkit-scrollbar {
