--- a/front-end/src/styles/index.css
+++ b/front-end/src/styles/index.css
@@ -30,7 +30,6 @@
     --color-hoverLimparFiltros: #64783b;
 
 }
-
 .shadow-title {
     text-shadow: 0px 10px 8px #00000040;
 }
@@ -126,4 +125,14 @@ background: #a0a0a0; /* cor mais escura no hover */
 
 body {
   font-family: 'Montserrat', sans-serif;
+}
+
+@media (max-width: 1023px) {
+  .ag-paging-panel {
+    font-size: 11px !important;
+    gap: 10px;
+  }
+  .ag-paging-row-summary-panel {
+    display: none !important;
+  }
 }
